continue moving towards json support